--- a/Sdm2Edm.Tests/Sdm2Edm.Tests.fsproj
+++ b/Sdm2Edm.Tests/Sdm2Edm.Tests.fsproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
     <Content Include="packages.config" />
+    <Compile Include="ConverterTest.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Edm">
