--- a/Sdm2Edm.Tests/Sdm2Edm.Tests.fsproj
+++ b/Sdm2Edm.Tests/Sdm2Edm.Tests.fsproj
@@ -55,6 +55,7 @@
     <Compile Include="TestUtils.fs" />
     <Compile Include="CellExtensionTest.fs" />
     <Compile Include="ConverterTest.fs" />
+    <Content Include="app.config" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Edm">
@@ -70,7 +71,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="Sdm">
-      <HintPath>..\packages\Sdm.1.0.0.0\lib\net46\Sdm.dll</HintPath>
+      <HintPath>..\packages\Sdm.2.0.0.0\lib\net46\Sdm.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
