--- a/Sdm2Edm/Sdm2Edm.fsproj
+++ b/Sdm2Edm/Sdm2Edm.fsproj
@@ -55,6 +55,7 @@
     <Compile Include="Basis.fs" />
     <Compile Include="ConvertionRule.fs" />
     <Compile Include="CellExtension.fs" />
+    <Compile Include="TableConverter.fs" />
     <Compile Include="Converter.fs" />
   </ItemGroup>
   <ItemGroup>
