--- a/Sdm2Edm.Tests/Sdm2Edm.Tests.fsproj
+++ b/Sdm2Edm.Tests/Sdm2Edm.Tests.fsproj
@@ -56,6 +56,7 @@
     <Compile Include="CellExtensionTest.fs" />
     <Compile Include="TableConverterTest.fs" />
     <Compile Include="ConverterTest.fs" />
+    <Compile Include="PagerTest.fs" />
     <Content Include="app.config" />
   </ItemGroup>
   <ItemGroup>
