--- a/presentations/NLNagoya/NLNagoya.fsproj
+++ b/presentations/NLNagoya/NLNagoya.fsproj
@@ -67,14 +67,17 @@
     <None Include="mini.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="at.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Edm">
-      <HintPath>..\..\packages\Edm.2.1.0.0\lib\net46\Edm.dll</HintPath>
+      <HintPath>..\..\packages\Edm.2.2.0.0\lib\net46\Edm.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Edm.Writer.EPPlus">
-      <HintPath>..\..\packages\Edm.Writer.EPPlus.2.0.0.0\lib\net46\Edm.Writer.EPPlus.dll</HintPath>
+      <HintPath>..\..\packages\Edm.Writer.EPPlus.2.2.0.0\lib\net46\Edm.Writer.EPPlus.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="EPPlus">
