--- a/presentations/NLNagoya/NLNagoya.fsproj
+++ b/presentations/NLNagoya/NLNagoya.fsproj
@@ -57,6 +57,7 @@
     <Compile Include="AssemblyInfo.fs" />
     <Compile Include="Styles.fs" />
     <Compile Include="Types.fs" />
+    <Compile Include="Shapes.fs" />
     <Compile Include="Rule.fs" />
     <Compile Include="Program.fs" />
     <None Include="App.config" />
