--- a/presentations/NLNagoya/packages.config
+++ b/presentations/NLNagoya/packages.config
@@ -3,5 +3,6 @@
   <package id="Edm" version="2.3.0.0" targetFramework="net461" />
   <package id="Edm.Writer.EPPlus" version="2.3.0.0" targetFramework="net461" />
   <package id="EPPlus" version="4.0.4" targetFramework="net461" />
+  <package id="FSharp.Compiler.Service" version="3.0.0.0" targetFramework="net461" />
   <package id="Sdm" version="3.1.0.0" targetFramework="net461" />
 </packages>
