コードを整理

--- a/Sdm2Edm/Sdm2Edm.fsproj
+++ b/Sdm2Edm/Sdm2Edm.fsproj
@@ -53,6 +53,8 @@
     <Compile Include="AssemblyInfo.fs" />
     <Content Include="packages.config" />
     <Compile Include="Basis.fs" />
+    <Compile Include="Types.fs" />
+    <Compile Include="Converters.fs" />
     <Compile Include="ConvertionRule.fs" />
     <Compile Include="CellExtension.fs" />
     <Compile Include="TableConverter.fs" />
