はみ出し防止処理を実装してみた

--- a/presentations/NLNagoya/NLNagoya.fsproj
+++ b/presentations/NLNagoya/NLNagoya.fsproj
@@ -107,6 +107,7 @@
       <Project>{5bfa084e-f029-4100-bd8c-b2e2b5b7b6a1}</Project>
       <Private>True</Private>
     </ProjectReference>
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
